# code-star

./: README.md  __init__.py  apps.py  consumers.py  mixins.py  permissions.py  pyproject.toml  requirements.txt  routing.py  urls.py
.github/workflows/: django.yml
chats/: __init__.py  apps.py  consumers.py  models.py  serializers.py  views.py
chats/migrations/: 0001_initial.py
chats/tests/: test_models.py  test_views.py
completions/: __init__.py  apps.py  consumers.py  serializers.py
completions/tests/: __init__.py  test_views.py
messages/: __init__.py  apps.py  consumers.py  models.py  serializers.py  views.py
messages/migrations/: 0001_initial.py
messages/tests/: __init__.py  test_models.py  test_views.py
tests/: __init__.py
users/: __init__.py  apps.py  models.py  serializers.py
users/tests/: __init__.py  test_models.py
